fixing the button vertical alignment

--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -553,7 +553,6 @@ main .file-wrapper .file-description button::after{
 main .form .button-wrapper button {
     cursor:pointer;
     align-self: end;
-    margin-bottom: 1rem;
 }
 
 main .form .button-wrapper button:hover {
